# negentropy

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  main.cpp  shell.html  test_color.cpp  test_color_debug.cpp  test_output.xml  test_serialization  test_serialization.cpp
Core/: main.cpp
Core/Diagram/: Block.cpp  Block.hpp  Camera.hpp  Component.cpp  Component.hpp  DiagramElement.hpp  DiagramManager.cpp  DiagramManager.hpp  Grid.hpp  TreeRenderer.cpp  TreeRenderer.hpp
Core/Diagram/Components/: BlockComponent.hpp  CameraComponent.hpp  CircleComponent.hpp  GridComponent.hpp  GroupComponent.hpp  MinimapComponent.hpp  RectangleComponent.hpp  TextComponent.hpp  TriangleComponent.hpp
Core/Diagram/Components/Interface/: Component.hpp
Core/Main/: Application.cpp  Application.hpp  ComponentHierarchy.hpp  ComponentSelection.hpp  ComponentTree.hpp  DiagramData.cpp  DiagramData.hpp  EventHandler.hpp  Renderer.cpp  Renderer.hpp
Core/Utils/: IconsFontAwesome5.h  Notification.hpp  Path.hpp  XMLSerialization.hpp
Workspace/: Default.xml
